# US-Sector-Rotation-Fund-Flow-Model

./: .gitignore  00_PROJECT_SPEC.md  CLAUDE.md  M4_PLAN.md  PROGRESS.md  README.md  ROADMAP.md  config.yaml  pyproject.toml  sector_rotation_model.py
src/srm/: cli.py  config.py
src/srm/backtest/: __init__.py  sweep.py  walk.py  whipsaw.py
src/srm/data/: cache.py  fred.py  loader.py  snapshot.py
src/srm/report/: backtest_report.py  export.py  insight.py  markdown_report.py  notion_report.py  plot.py  synthesize.py
src/srm/signals/: cycle.py  risk.py  rrg.py  trend.py
tests/: conftest.py  test_backtest_report.py  test_cache.py  test_config.py  test_cycle.py  test_dotenv.py  test_export.py  test_fred.py  test_insight.py  test_markdown_report.py  test_notion_report.py  test_plot.py  test_report_cycle.py  test_risk.py  test_rrg.py  test_snapshot.py  test_sweep.py  test_synthesize.py  test_trend.py  test_walk.py  test_whipsaw.py
